--- a/clynicalsafe/website/templates/login.html
+++ b/clynicalsafe/website/templates/login.html
@@ -35,78 +35,80 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
         <![endif]-->
 
-        <header>
-            <div class="header-area ">
-                <div class="header-top_area">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-xl-6 col-md-6 ">
-                                <div class="social_media_links">
-                                    <a href="#">
-                                        <i class="fa fa-linkedin"></i>
-                                    </a>
-                                    <a href="#">
-                                        <i class="fa fa-facebook"></i>
-                                    </a>
-                                    <a href="#">
-                                        <i class="fa fa-google-plus"></i>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-xl-6 col-md-6">
-                                <div class="short_contact_list">
-                                    <ul>
-                                        <li><a href="#"> <i class="fa fa-envelope"></i> info@docmed.com</a></li>
-                                        <li><a href="#"> <i class="fa fa-phone"></i> 160160</a></li>
-                                        
-                                        <li><a href="login.html">Login </a></li>
-                                            <li><a href="register.html">Registro</a></li>
-                                            <span style="font-size: 15px"> Welcome {% if request.user.is_authenticated %}
-                                                {{request.user.username}}
-                                                {% endif %}
-                                              </span>
-                                            {% if request.user.is_authenticated %}
-                                        <a href="{%url "logout"%}"><li class="material-symbols-outlined icons">Salir</li></a>
-                                        {%else%}
-                                        <a href="{%url "login"%}"><span class="material-symbols-outlined icons"></span></a>
-                                        {% endif %}
-                                    </ul>
-                                </div>
+    <header>
+        <div class="header-area ">
+            <div class="header-top_area">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-6 col-md-6 ">
+                            <div class="social_media_links">
+                                <a href="#">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fa fa-facebook"></i>
+                                </a>
+                                <a href="#">
+                                    <i class="fa fa-google-plus"></i>
+                                </a>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div id="sticky-header" class="main-header-area">
-                    <div class="container">
-                        <div class="row align-items-center">
-                            <div class="col-xl-3 col-lg-2">
-                                <div class="logo">
-                                    <a href="index.html">
-                                        <img src="{% static 'website/img/logo.png' %}" alt="">
-                                    </a>
-                                </div>
+                        <div class="col-xl-6 col-md-6">
+                            <div class="short_contact_list">
+                                <ul>
+                                    <li><a href="#"> <i class="fa fa-envelope"></i> info@docmed.com</a></li>
+                                    <li><a href="#"> <i class="fa fa-phone"></i> 160160</a></li>
+
+                                    <li><a href="login.html">Login </a></li>
+                                    <li><a href="register.html">Registro</a></li>
+                                    <li><span style="font-size: 15px"> Welcome {% if request.user.is_authenticated %}
+                                            {{request.user.username}}
+                                            {% endif %}
+                                        </span>
+                                        {% if request.user.is_authenticated %}
+                                        <a href="{% url 'website:logout' %}">
+                                    <li class="material-symbols-outlined icons">Salir</li></a>
+                                    {%else%}
+                                    <a href="{% url 'website:login' %}"><span
+                                            class="material-symbols-outlined icons"></span></a>
+                                    {% endif %}</li>
+                                </ul>
                             </div>
-                            <div class="col-xl-6 col-lg-7">
-                                <div class="main-menu  d-none d-lg-block">
-                                    <nav>
-                                        <ul id="navigation">
-                                            <li><a class="active" href="index.html">Inicio</a></li>
-                                            <li><a href="Doctors.html">Doctores</a></li>
-                                            <li><a href="contact.html">Contactanos</a></li>
-                                        </ul>
-                                    </nav>
-                                </div>
-                            </div>
-                            
                         </div>
                     </div>
                 </div>
             </div>
-        </header>
+            <div id="sticky-header" class="main-header-area">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-xl-3 col-lg-2">
+                            <div class="logo">
+                                <a href="index.html">
+                                    <img src="{% static 'website/img/logo.png' %}" alt="">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-xl-6 col-lg-7">
+                            <div class="main-menu  d-none d-lg-block">
+                                <nav>
+                                    <ul id="navigation">
+                                        <li><a class="active" href="index.html">Inicio</a></li>
+                                        <li><a href="Doctors.html">Doctores</a></li>
+                                        <li><a href="contact.html">Contactanos</a></li>
+                                    </ul>
+                                </nav>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     <!-- slider_area_end -->
 
     <!-- service_area_start -->
-    
+
 
     <!-- welcome_docmed_area_start -->
     <div class="welcome_docmed_area">
@@ -127,24 +129,25 @@
                             <form action="" method="POST">
                                 {% csrf_token %}
                                 <div class="form-content">
-                                        <label>Usuario * </label>
-                                        <input type="text" name="username" required>
+                                    <label>Usuario * </label>
+                                    <input type="text" name="username" required>
 
-                                        <label>Contrase&ntilde;a *</label>
-                                        <input type="password" name="password" required>
-                                    
-                                   <input type="submit" class="button " value="Iniciar">
-                                   <a href="{% url "register" %}" style="font-size: 16px">¿No tienes cuenta? Registrate aqu&iacute;</a>
-                
+                                    <label>Contrase&ntilde;a *</label>
+                                    <input type="password" name="password" required>
+
+                                    <input type="submit" class="button " value="Iniciar">
+                                    <a href="{% url 'website:register' %}" style="font-size: 16px">¿No tienes cuenta?
+                                        Registrate aqu&iacute;</a>
+
                                 </div>
                             </form>
                         </div>
                     </div>
                 </div>
-                    </div>
-                </div>
             </div>
         </div>
+    </div>
+    </div>
     </div>
     <!-- welcome_docmed_area_end -->
 
@@ -153,7 +156,8 @@
         <div class="conatiner-fluid p-0">
             <div class="row no-gutters">
                 <div class="col-xl-6">
-                    <div class="single_emergency d-flex align-items-center justify-content-center emergency_bg_1 overlay_skyblue">
+                    <div
+                        class="single_emergency d-flex align-items-center justify-content-center emergency_bg_1 overlay_skyblue">
                         <div class="info">
                             <h3>For Any Emergency Contact</h3>
                             <p>Esteem spirit temper too say adieus.</p>
@@ -164,7 +168,8 @@
                     </div>
                 </div>
                 <div class="col-xl-6">
-                    <div class="single_emergency d-flex align-items-center justify-content-center emergency_bg_2 overlay_skyblue">
+                    <div
+                        class="single_emergency d-flex align-items-center justify-content-center emergency_bg_2 overlay_skyblue">
                         <div class="info">
                             <h3>Make an Online Appointment</h3>
                             <p>Esteem spirit temper too say adieus.</p>
@@ -178,94 +183,95 @@
         </div>
     </div>
     <!-- Emergency_contact end -->
-<!-- footer start -->
-<footer class="footer">
-    <div class="footer_top">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-4 col-md-6 col-lg-4">
-                    <div class="footer_widget">
-                        <div class="footer_logo">
-                            <a href="#">
-                                <img src="{% static 'website/img/footer_logo.png' %}" alt="">
-                            </a>
-                        </div>
-                        <div class="socail_links">
-                            <ul>
-                                <li>
-                                    <a href="#">
-                                        <i class="ti-facebook"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="ti-twitter-alt"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-instagram"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
+    <!-- footer start -->
+    <footer class="footer">
+        <div class="footer_top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-4 col-md-6 col-lg-4">
+                        <div class="footer_widget">
+                            <div class="footer_logo">
+                                <a href="#">
+                                    <img src="{% static 'website/img/footer_logo.png' %}" alt="">
+                                </a>
+                            </div>
+                            <div class="socail_links">
+                                <ul>
+                                    <li>
+                                        <a href="#">
+                                            <i class="ti-facebook"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="ti-twitter-alt"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa fa-instagram"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
 
+                        </div>
                     </div>
-                </div>
-                <div class="col-xl-2 offset-xl-1 col-md-6 col-lg-3">
-                    <div class="footer_widget">
-                        <h3 class="footer_title">
+                    <div class="col-xl-2 offset-xl-1 col-md-6 col-lg-3">
+                        <div class="footer_widget">
+                            <h3 class="footer_title">
                                 Departamentos
-                        </h3>
-                        <ul>
-                            <li><a href="#">Oftalmologo</a></li>
-                            <li><a href="#">Dermatologia</a></li>
-                            <li><a href="#">Patologia
-                            </a></li>
-                            <li><a href="#">Medicos Generales</a></li>
-                            <li><a href="#">Odontologos</a></li>
-                        </ul>
+                            </h3>
+                            <ul>
+                                <li><a href="#">Oftalmologo</a></li>
+                                <li><a href="#">Dermatologia</a></li>
+                                <li><a href="#">Patologia
+                                    </a></li>
+                                <li><a href="#">Medicos Generales</a></li>
+                                <li><a href="#">Odontologos</a></li>
+                            </ul>
 
+                        </div>
+                    </div>
+
+                    <div class="col-xl-3 col-md-6 col-lg-3">
+                        <div class="footer_widget">
+                            <h3 class="footer_title">
+                                Direccion
+                            </h3>
+                            <p>
+                                Carrera80#22-103<br>
+                                +10 367 467 8934 <br>
+                                clynicalsafe@gmail .com
+                            </p>
+                        </div>
                     </div>
                 </div>
-        
-                <div class="col-xl-3 col-md-6 col-lg-3">
-                    <div class="footer_widget">
-                        <h3 class="footer_title">
-                                Direccion
-                        </h3>
-                        <p>
-                            Carrera80#22-103<br>
-                            +10 367 467 8934 <br>
-                            clynicalsafe@gmail  .com
+            </div>
+        </div>
+        <div class="copy-right_text">
+            <div class="container">
+                <div class="footer_border"></div>
+                <div class="row">
+                    <div class="col-xl-12">
+                        <p class="copy_right text-center">
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+
+
+
+
+                            Copyright &copy;
+                            <script>document.write(new Date().getFullYear());</script> Todos los derechos reservados
                         </p>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="copy-right_text">
-        <div class="container">
-            <div class="footer_border"></div>
-            <div class="row">
-                <div class="col-xl-12">
-                    <p class="copy_right text-center">
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+    </footer>
+    <!-- footer end  -->
+    <!-- link that opens popup -->
 
 
-
-
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos los derechos reservados
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
-<!-- footer end  -->
-<!-- link that opens popup -->
-
-    
     <!-- JS here -->
     <script src="{% static 'website/js/vendor/modernizr-3.5.0.min.js' %}"></script>
     <script src="{% static 'website/js/vendor/jquery-1.12.4.min.js' %}"></script>
@@ -307,9 +313,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos
             }
 
         });
-    $(document).ready(function() {
-    $('.js-example-basic-multiple').select2();
-});
+        $(document).ready(function () {
+            $('.js-example-basic-multiple').select2();
+        });
     </script>
 </body>
 
