--- a/clynicalsafe/website/templates/index.html
+++ b/clynicalsafe/website/templates/index.html
@@ -62,19 +62,21 @@
 
                                     <li><a href="login.html">Login </a></li>
                                     <li><a href="register.html">Registro</a></li>
-                                    <span style="font-size: 15px"> Welcome {% if request.user.is_authenticated %}
-                                        {{request.user.username}}
+                                    <div class="mt_2">
+                                        <span style="font-size: 15px"> Welcome {% if request.user.is_authenticated %}
+                                            {{request.user.username}}
+                                            {% endif %}
+                                        </span>
+                                        {% if request.user.is_authenticated %}
+                                        <a href="{% url 'website:logout' %}" class="">
+                                            <li class="material-symbols-outlined icons">Salir</li>
+                                        </a>
+                                        <br><a href="historias.html" class="fa fa-envelope">Ver Historia Clinica</a>
+                                        {%else%}
+                                        <a href="{% url 'website:login' %}"><span
+                                                class="material-symbols-outlined icons"></span></a>
                                         {% endif %}
-                                    </span>
-                                    {% if request.user.is_authenticated %}
-                                    <a href="{% url 'website:logout' %}" class="">
-                                        <li class="material-symbols-outlined icons">Salir</li>
-                                    </a>
-                                    <br><a href="historias.html" class="fa fa-envelope">Ver Historia Clinica</a>
-                                    {%else%}
-                                    <a href="{% url 'website:login' %}"><span
-                                            class="material-symbols-outlined icons"></span></a>
-                                    {% endif %}
+                                    </div>
                                 </ul>
                             </div>
                         </div>
